--- a/wally.toml
+++ b/wally.toml
@@ -8,8 +8,9 @@ realm = "shared"
 Knit = "sleitnick/knit@1.7.0"
 Loader = "sleitnick/loader@2.0.0"
 WaitFor = "sleitnick/wait-for@1.0.0"
+Signal = "sleitnick/signal@2.0.3"
 
 Fusion = "acecateer/fusion@0.3.1"
 
-Janitor = "howmanysmall/janitor@1.17.0"
 Promise = "evaera/promise@4.0.0"
+Trove = "sleitnick/trove@1.5.0"	
