--- a/wally.toml
+++ b/wally.toml
@@ -6,6 +6,7 @@ realm = "shared"
 
 [dependencies]
 Knit = "sleitnick/knit@1.7.0"
+Streamable = "sleitnick/streamable@1.2.4"
 Loader = "sleitnick/loader@2.0.0"
 WaitFor = "sleitnick/wait-for@1.0.0"
 Signal = "sleitnick/signal@2.0.3"
