--- a/wally.toml
+++ b/wally.toml
@@ -10,8 +10,11 @@ Streamable = "sleitnick/streamable@1.2.4"
 Loader = "sleitnick/loader@2.0.0"
 WaitFor = "sleitnick/wait-for@1.0.0"
 Signal = "sleitnick/signal@2.0.3"
+TableUtil = "sleitnick/table-util@1.2.1"
 
 Fusion = "acecateer/fusion@0.3.1"
 
 Promise = "evaera/promise@4.0.0"
 Trove = "sleitnick/trove@1.5.0"	
+
+LinkedList = "lasttalon/linked-list@0.1.0"
