--- a/default.project.json
+++ b/default.project.json
@@ -8,7 +8,7 @@
             "Source": {
                 "$path": "src/ReplicatedStorage"
             },
-			"ExPackages": {
+			"Packages": {
                 "$path": "Packages"
             }
         },
