--- a/wally.toml
+++ b/wally.toml
@@ -18,3 +18,4 @@ Promise = "evaera/promise@4.0.0"
 Trove = "sleitnick/trove@1.5.0"	
 
 LinkedList = "lasttalon/linked-list@0.1.0"
+ZonePlus = "mattschrubb/zoneplus@3.2.0"
